# arduino

7_segment_display/: 7_segment_display.ino
7_segment_display/7_segment_display/: 7_segment_display.ino
8x8 matrix display/: 8x8_matrix_display.ino
Blink/: Blink.ino
Potenciometer_led/: Potenciometer_led.ino
Serial/: .Serial.ino.swp  Serial.ino  Serial_sorter.ino  terminal.ino
clapping_lamp/clapping_lamp/: clapping_lamp.ino
clapping_lamp/docs/: Clapping_lamp_fritzing.fzz  clapping_lamp_description.aux  clapping_lamp_description.tex
clapping_lamp/docs/fritzing/: Clapping_lamp_fritzing.fzz  PowerBRICK 12V.fzpz
joy/sketch_mar15b/: sketch_mar15b.ino
mtrx/: mtrx.c  mtrx.ino
mtrx/mtrx.c/: mtrx.c.ino
project/: CMakeLists.txt  project.cpp
project/project/: CMakeCache.txt  project.ino
project/project1/: CMakeLists.txt
sketch_mar12a/: sketch_mar12a.ino
snake/: snake.ino
sound/sketch_apr18a/: sketch_apr18a.ino
terminal/proba/: proba.ino
test/test/: test.ino
